# libredwg

./: .gitignore  CMakeLists.txt  ChangeLog  autogen.sh  configure.ac  logs.sh
bindings/: Makefile.am  dwg.i
bindings/perl/: .gitignore  Makefile.PL  Makefile.am  wrap_perl.c
bindings/perl/src/: LibreDWG.pm  Makefile.PL  wrap_perl.c
bindings/perl/swig/: Makefile.am
bindings/python/: Makefile.am
doc/: LibreDWG.texi
examples/: Makefile.am  alldwg.inc  load_dwg.c  log_unknown.pl  unknown.pi
include/: dwg.h
m4/: ax_func_getopt_long.m4
programs/: Makefile.am  dwggrep.1  dwggrep.c  dwglayers.c  dwgrewrite.c  dwgwrite.c
src/: config.h  decode.c  decode_r2007.c  dwg.c  in_dxf.c  logging.h
